[tool.poetry]
name = "mcpkg"
version = "0.2.3"
description = "Package manager for Minecraft datapacks and resourcepacks"
authors = ["Ben Mitchell <bjosephmitchell@gmail.com>", "jerbob <mail@jeremiahboby.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
colorama = "^0.4.4"
pathlib = "^1.0.1"
tqdm = "^4.56.0"
packaging = "^20.9"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
isort = "^5.7.0"
ipython = "^7.20.0"
flake8 = "^3.8.4"

[tool.poetry.scripts]
mcpkg = "mcpkg:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
